# ai_playground

./: .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  README.md  feature_changes.patch  pyproject.toml  requirements-lint.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml
apps/chatgpt_apps/: README.md
apps/chatgpt_apps/rememberbook-app/mcp/: .env.template  .gitignore  README.md  mcp-config.json  mcp-typescript-sdk.md  package-lock.json  package.json  tsconfig.json
apps/chatgpt_apps/rememberbook-app/web/: .gitignore  README.md  (+10 more)
apps/chatgpt_apps/rememberbook-backend-server/: .gitignore  README.md  app.py  main.py  models.py  pyproject.toml  test_api.py
data/delaney_solubility/: README.md
data/government_economics/: estat_gov_10dd_edpt1$defaultview_filtered_en.csv
experiments/chatgpt_system_messages/: README.md
experiments/nondeterministic_ai_systems/: 01_02.py  01_03.py  02_04.py  02_05.py  02_07.py
models/chatgpt_system_messages/completions_api/: basic_response.py  custom_response.py
models/chatgpt_system_messages/responses_api/: basic_response.py  custom_response.py
models/delaney_solubility/: delaney_solubility.ipynb
models/government_economics/: Government_deficit_surplus,_debt_and_associated_data.ipynb
models/incident_management/: AI_Enabled_Incident_Management.ipynb
models/nondeterministic_ai_systems/: 01_01.py  01_02.py  01_03.py  01_04.py  02_02.py  02_03.py  02_04.py  02_05.py  02_06.py  02_07.py
models/stocks/: PLTR_stock.ipynb
notebooks/delaney_solubility/: delaney_solubility.ipynb
(+11 files in other folders)
